# convey-rs

./: Cargo.toml  README.md
docs/: crates.js  help.html  index.html  search-index.js  settings.html  src-files.js
docs/convey_rs/: all.html  constant.MIN_SAVE_FILE_VERSION.html  fn.read_file.html  index.html  sidebar-items.js  trait.ReadSaveFileBytes.html  type.Result.html
docs/convey_rs/errors/: enum.ParseError.html  index.html
docs/convey_rs/property/: enum.ArrayPropertyStructValue.html  enum.ArrayPropertyValue.html  enum.FINLuaProcessorStateStorageStructValue.html  enum.MapPropertyKey.html  enum.MapPropertyValue.html  enum.Numeric.html  enum.PropertyValue.html  enum.SetPropertyValue.html  enum.StructPropertyValue.html  enum.TextPropertyHistory.html  index.html  sidebar-items.js  struct.Argument.html  struct.ArgumentHistory.html  struct.ArrayProperty.html  struct.ArrayPropertyStruct.html  struct.BaseHistory.html  struct.ByteProperty.html  struct.Color.html  struct.FINGPUT1Buffer.html  struct.FINGPUT1BufferPixel.html  struct.FINLuaProcessorStateStorage.html  struct.FINLuaProcessorStateStorageStruct.html  struct.FINNetworkTrace.html  struct.FrameRange.html  struct.InventoryItem.html  struct.InventoryStack.html  struct.ItemAmount.html  struct.MapProperty.html  struct.NoneHistory.html  struct.Property.html  struct.SetProperty.html  struct.StringTableEntryHistory.html  (+5 more)
docs/rust_belt/: all.html  constant.MIN_SAVE_FILE_VERSION.html  fn.read_file.html  index.html  trait.ReadSaveFileBytes.html  type.Result.html
src/: errors.rs  lib.rs  main.rs  property.rs  save.rs
(+113 files in other folders)
