[package]
name = "convey-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
byteorder = "1.5.0"
chrono = "0.4.38"
env_logger = "0.11.5"
flate2 = "1.0.31"
log = "0.4.22"
serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0.122"
strum = { version = "0.26.3", features = ["derive"] }
thiserror = "1.0.63"
